--- a/index.html
+++ b/index.html
@@ -1,104 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Earth Quiz</title>
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
-  </head>
-  <body>
-    <header>
-      <h1 class="mt-5 text-center decoration">Planet Earth</h1>
-      <h3 class="mt-5 text-center decoration">
-        Let's see how much do you know about your home!
-      </h3>
-    </header>
-    <!--LANDING PAGE-->
-    <div class="container decoration text-center" id="landing-page">
-      <h4 class="mt-5">Few facts about Earth</h4>
-      <ul>
-        <li class="mt-5">
-          The Earth is the densest planet in the Solar System. This varies
-          according to the part of the planet; for example, the metallic core is
-          denser than the crust. The average density of the Earth is
-          approximately 5.52 grams per cubic centimetre.
-        </li>
-        <li class="mt-5">
-          Only 3% water of the earth is fresh, rest 97% salted. Of that 3%, over
-          2% is frozen in ice sheets and glaciers. Means less than 1% fresh
-          water is found in lakes, rivers and underground.
-        </li>
-        <li>
-          Earth is the only planet not named after a god. The other seven
-          planets in our solar system are all named after Roman gods or
-          goddesses. Although only Mercury, Venus, Mars, Jupiter and Saturn were
-          named during ancient times, because they were visible to the naked
-          eye, the Roman method of naming planets was retained after the
-          discovery of Uranus and Neptune.
-        </li>
-        <li class="mt-5">
-          A year on Earth isn’t 365 days It’s actually 365.2564 days. It’s this
-          extra .2564 days that creates the need for leap years. That’s why we
-          tack on an extra day in February every year divisible by 4 – 2004,
-          2008, etc – unless it’s divisible by 100 (1900, 2100, etc)… unless
-          it’s divisible by 400 (1600, 2000, etc).
-        </li>
-      </ul>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Earth Quiz</title>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+        <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    </head>
+    <body>
+        <header>
+            <h1 class="mt-5 text-center decoration">Planet Earth</h1>
+            <h3 class="mt-5 text-center decoration">
+                Let's see how much do you know about your home!
+            </h3>
+        </header>
+        <!--LANDING PAGE-->
+        <div class="container decoration text-center" id="landing-page">
+            <h4 class="mt-5">Few facts about Earth</h4>
+            <ul>
+                <li class="mt-5">
+                    The Earth is the densest planet in the Solar System. This varies according to the part of the planet; for example, the metallic core is denser than the crust. The average density of the Earth is approximately 5.52 grams
+                    per cubic centimetre.
+                </li>
+                <li class="mt-5">
+                    Only 3% water of the earth is fresh, rest 97% salted. Of that 3%, over 2% is frozen in ice sheets and glaciers. Means less than 1% fresh water is found in lakes, rivers and underground.
+                </li>
+                <li>
+                    Earth is the only planet not named after a god. The other seven planets in our solar system are all named after Roman gods or goddesses. Although only Mercury, Venus, Mars, Jupiter and Saturn were named during ancient
+                    times, because they were visible to the naked eye, the Roman method of naming planets was retained after the discovery of Uranus and Neptune.
+                </li>
+                <li class="mt-5">
+                    A year on Earth isn’t 365 days It’s actually 365.2564 days. It’s this extra .2564 days that creates the need for leap years. That’s why we tack on an extra day in February every year divisible by 4 – 2004, 2008, etc –
+                    unless it’s divisible by 100 (1900, 2100, etc)… unless it’s divisible by 400 (1600, 2000, etc).
+                </li>
+            </ul>
 
-      <h3 class="mt-5">Test your knowledge by taking this short quiz.</h3>
-      <button type="button" class="btn btn-warning btn-lg mt-5" id="start-button">
-        Start Quiz!
-      </button>
-    </div>
-    <!--/LANDING PAGE-->
-
-    <!--QUIZ QUESTIONS-->
-
-    <!--QUESTION CONTAINER-->
-    <div class="quiz-questions" id="quiz-questions">
-    <div class="container">
-    <div class="question" id="question">
-    <button type="button" class="btn btn-danger btn-lg">Quit</button>
-      <div class="card bg-light">
-        <!--<img src="assets/images/ocean.jpg" class="card-img-top" alt="Pacific Ocean"/>-->
-        <h4 class="card-title text-center mt-3" id="question-info">Question</h4>
-        <div class="card-body">
-          <div class="row" id="answer-btns">
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn"></button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn"></button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn"></button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn"></button>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-12 text-center">
-            <button class="btn btn-primary btn-lg mt-3" id="next-button">Next</button>
-            </div>
-          </div>
-          </div>
+            <h3 class="mt-5">Test your knowledge by taking this short quiz.</h3>
+            <button type="button" class="btn btn-warning btn-lg mt-5" id="start-button">
+                Start Quiz!
+            </button>
         </div>
-      </div>
-      </div>
-      <!--/QUESTION CONTAINER-->
-    </div>
-    <script src="assets/js/jquery-3.5.1.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>
-  </body>
+        <!--/LANDING PAGE-->
+
+        <!--QUIZ QUESTIONS-->
+
+        <!--QUESTION CONTAINER-->
+        <div class="quiz-questions" id="quiz-questions">
+            <div class="container">
+                <div class="question" id="question">
+                    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+                    <div class="card bg-light">
+                            <img class="card-img-top" alt="Pacific Ocean" id="image"/>
+                        <h4 class="card-title text-center mt-3" id="question-info">Question</h4>
+                        <div class="card-body">
+                            <div class="row" id="answer-btns">
+                                <div class="col-sm-12 col-lg-6 text-center mt-3">
+                                    <button class="answer-btn" id="answer-btn-1"></button>
+                                </div>
+                                <div class="col-sm-12 col-lg-6 text-center mt-3">
+                                    <button class="answer-btn" id="answer-btn-2"></button>
+                                </div>
+                                <div class="col-sm-12 col-lg-6 text-center mt-3">
+                                    <button class="answer-btn" id="answer-btn-3"></button>
+                                </div>
+                                <div class="col-sm-12 col-lg-6 text-center mt-3">
+                                    <button class="answer-btn" id="answer-btn-4"></button>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 text-center">
+                                    <button class="btn btn-primary btn-lg mt-3" id="next-button">Next</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--/QUESTION CONTAINER-->
+        </div>
+        <script src="assets/js/jquery-3.5.1.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+        <script src="assets/js/script.js"></script>
+    </body>
 </html>
